manage event now displays nice columns instead of rows. Added custom scrollbars, fixed BG color on create and manage pages.

--- a/client/stylesheets/createEventPageStyles/createEventFormOverides.css
+++ b/client/stylesheets/createEventPageStyles/createEventFormOverides.css
@@ -57,3 +57,14 @@
     vertical-align: middle;
     float: none;
 }
+
+.create-event-page-main{
+	background-color: #A200FF;
+}
+.create-event-logo {
+	padding: 15px 0;
+	color: white;
+	background-color: #282929;
+	font-size: 48px;
+	font-weight: bold;
+  }
