--- a/client/stylesheets/manageEventStyles/manageEventPageStyles.css
+++ b/client/stylesheets/manageEventStyles/manageEventPageStyles.css
@@ -1,44 +1,40 @@
-@media(min-width: 992px){
-	.manageEventContainer{
-		font-family: 'Passion One';
-		display: block;
-		margin: 5%;
-		font-size: 35px;
-	}
-	.manageEventRow{
-		width: 100%;
-	}
-	.manageEventPageCol{
-		width: 45%;
-		margin-right: 4%;
-		background-color: #292828;
-		color: white;
-	}
-	.nameLinkCreated{
-		color: white;
-		font-size: 30px;
-	}
+.mainManageEventPage{
+	background-color: #A0F;
+	overflow-y: hidden;
+}
+.manageEventContainer{
+	font-family: 'Passion One';
+	display: block;
+	margin-left: 2%;
+	margin-right: 2%;
+	font-size: 35px;
+}
+.manageEventRow{
+	width: 100%;
+}
+.manageEventCol{
+	height: 65vh;
+	width: 48%;
+	margin: 1%;
+	overflow-y: scroll;
+	background-color:#292828;
+	color: white;
+}
+.nameLinkCreated{
+	color: white;
+	font-size: 30px;
 }
 
-@media(min-width: 0px){
-	.manageEventContainer{
-		font-family: 'Passion One';
-		display: block;
-		margin: 5%;
-		font-size: 35px;
-	}
-	.manageEventRow{
-		width: 100%;
-		margin-top: 10px;
-	}
-	.manageEventPageCol{
-		width: 100%;
-		margin-right: 4%;
-		background-color: #292828;
-		color: white;
-	}
-	.nameLinkCreated{
-		color: white;
-		font-size: 30px;
-	}
+.customScrollbar::-webkit-scrollbar {
+    width: 20px;
+}
+ 
+ .customScrollbar::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+ 
+.customScrollbar::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+	-webkit-box-shadow: inset 0 0 100px rgb(170,0,255)
 }
